# agentPINNs

./: .gitignore  README.md  pyproject.toml  train.py
configs/: advection_fixed.json  advection_frozen_agent.json  burgers_actor_critic.json  burgers_fixed_scheduler.json  burgers_tiny_loss_weight.json
reward_sweep/: README.md  base_config.json  collect_lbfgs_summary.py  collect_multiseed_summary.py  plot_lbfgs_weight_ablation.py  plot_reward_sweep_histories.py  plot_solution_slices_from_run.py  run_lbfgs_weight_ablation.py  run_reward_sweep.py
src/pinn_accel/: artifacts.py  checkpoints.py  config.py  controllers.py  experiment.py  losses.py  models.py  optim.py  plots.py  rewards.py  settings.py  training.py
src/pinn_accel/agents/: __init__.py  actor_critic.py  base.py  policy_gradient.py  tiny.py
src/pinn_accel/equations/: __init__.py  advection.py  base.py  burgers.py  heat.py
tests/: lbfgs_agent_reinit_experiment.py  smoke_test.py
